--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.30",
+    "@types/uuid": "^8.3.1",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.4",
     "html-webpack-plugin": "^5.3.2",
@@ -29,8 +30,11 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.0.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "uuid": "^8.3.2",
+    "webpack-deduplication-plugin": "0.0.8"
   }
 }
